# Optimized-Core

./: .gitignore  CMakeLists.txt  LICENSE  README.md  graphs.py
exe_matrix_o3.dSYM/Contents/: Info.plist
exe_matrix_o3.dSYM/Contents/Resources/DWARF/: exe_matrix_o3
exe_matrix_o3.dSYM/Contents/Resources/Relocations/aarch64/: exe_matrix_o3.yml
include/: func.h  kernel.h  matrix_multiply_neon.h  naive_matrix_multiply.h
src/: main.cc
